--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-responsive-modal": "^6.4.2",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
-    "react-toastify": "^11.0.2",
+    "react-toastify": "^11.0.3",
+    "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
